--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^5.3.6",
     "babel-loader": "^10.0.0",
     "html-react-parser": "^5.2.5",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.0",
     "react-apexcharts": "^1.9.0",
     "react-dom": "^19.1.0",
